--- a/src/Application/CertificatsBundle/Resources/views/apygrid/blocks.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/apygrid/blocks.html.twig
@@ -23,7 +23,7 @@
         {{ grid_rows(grid) }}
         </table>
         </div>
-        <div class="grid_footer">
+        <div class="grid_footer" align="center">
         {% if grid.isPagerSectionVisible %}
             {{ grid_pager(grid) }}
         {% endif %}
