--- a/src/Application/CertificatsBundle/Resources/views/Changements/index.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Changements/index.html.twig
@@ -34,7 +34,7 @@ Changements
                <th> Mardi</th>   <th> Mercredi</th>
                   <th> Jeudi</th>   <th> Vendredi</th>
   <th> Samedi</th>   <th> Dimanche</th>
-        </tr>   - 
+        </tr>  
           </thead>
     <tbody>
         <tr>
@@ -150,5 +150,6 @@ Changements
                                 </tbody>
                             </table>
 
-  {{ knp_pagination_render(pagination) }}
+   {{ knp_pagination_render(pagination, 'ApplicationCertificatsBundle:pagination:twitter_bootstrap_pagination.html.twig') }}
+
 {% endblock %}
