--- a/src/Application/CertificatsBundle/Resources/views/Environnements/index.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Environnements/index.html.twig
@@ -22,7 +22,7 @@
     </div>
     {% endfor %}
 {% endfor %}
-      <a href="{{ path('environnement_new') }}" class="btn btn-small btn-warning">Ajouter Environnement</a>
+      <a href="{{ path('environnement_new') }}" class="btn btn-small btn-primary">Ajouter Environnement</a>
     <br> <br>  
 
     <table class="table table-striped table-bordered table-hover">
