--- a/src/Application/CertificatsBundle/Resources/views/CertificatsCenter/indexapy.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/CertificatsCenter/indexapy.html.twig
@@ -33,7 +33,17 @@ $( "#form_bis" ).datepicker( "option", "minDate", selectedDate );
 LISTE DES {{ parent() }} 
 {% endblock %}
  
+
 {% block content %}
+ 
+
+{% for type, flashMessages in app.session.flashbag.all() %}
+    {% for flashMessage in flashMessages %}
+<div class="alert alert-{{ type }}">
+            {{ flashMessage|trans }}
+    </div>
+    {% endfor %}
+{% endfor %}
  
  {#{ date('-30days')|date('Y-m-d') }#}
 
