--- a/src/Application/CertificatsBundle/Resources/views/Changements/indexapy.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Changements/indexapy.html.twig
@@ -69,6 +69,15 @@ LISTE DES CHANGEMENTS
  
 {% block content %}
  
+
+{% for type, flashMessages in app.session.flashbag.all() %}
+    {% for flashMessage in flashMessages %}
+<div class="alert alert-{{ type }}">
+            {{ flashMessage|trans }}
+    </div>
+    {% endfor %}
+{% endfor %}
+
  {#{ date('-30days')|date('Y-m-d') }#}
 
 <a href="{{ path('changements_new') }}" class="btn btn-small btn-primary">Ajouter Changement</a>
