--- a/src/Application/CertificatsBundle/Resources/views/Changements/index.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Changements/index.html.twig
@@ -26,8 +26,7 @@ Changements
 {{ '5500'|price }}
 
 {{ 'Highlight this sentence'|highlight('i')|raw }}
-
-
+{{ 'Highlight this sentence'|highlightme|raw }}
  <a href="{{ path('changements_new') }}" class="btn btn-small btn-primary">Ajouter Changement</a>
     
 <table class="table small table-striped table-condensed table-bordered table-hover">
