--- a/src/Application/CertificatsBundle/Resources/views/Changements/newflow.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Changements/newflow.html.twig
@@ -31,70 +31,7 @@
 
 {% block javascripts %}
 {{ parent() }}
-<!--<script type="text/javascript" src="{{ asset('bundles/applicationcertificats/js/selectapplis.js') }}"></script>
-    -->
-    <script type="text/javascript">
-          
-    $(document).ready(function() {
-    //$(function() {
-      $( "#changements_dateDebut" ).datepicker({
-    maxDate: "+3M +10D",
-    changeMonth: true,
-    changeYeat: true,
-    numberOfMonths: 1,
-    dateFormat: "yy-mm-dd",
-    onClose: function( selectedDate ) {
-    $( "#form_bis" ).datepicker( "option", "minDate", selectedDate );
-    }
-    });
-        $( "#changements_dateFin" ).datepicker({
-    maxDate: "+3M +10D",
-    changeMonth: true,
-    changeYeat: true,
-    numberOfMonths: 1,
-    dateFormat: "yy-mm-dd",
-    onClose: function( selectedDate ) {
-    $( "#form_bis" ).datepicker( "option", "minDate", selectedDate );
-    }
-    });
-      $( "#changements_dateComep" ).datepicker({
-    maxDate: "+3M +10D",
-    changeMonth: true,
-    changeYeat: true,
-    numberOfMonths: 1,
-    dateFormat: "yy-mm-dd",
-    onClose: function( selectedDate ) {
-    $( "#form_bis" ).datepicker( "option", "minDate", selectedDate );
-    }
-    });
-      $( "#changements_dateVsr" ).datepicker({
-    maxDate: "+3M +10D",
-    changeMonth: true,
-    changeYeat: true,
-    numberOfMonths: 1,
-    dateFormat: "yy-mm-dd",
-    onClose: function( selectedDate ) {
-    $( "#form_bis" ).datepicker( "option", "minDate", selectedDate );
-    }
-    });
-    }); //Eof:: ready
-
-    $('.btn-add').click(function(event) {
-        var collectionHolder = $('#' + $(this).attr('data-target'));
-        var prototype = collectionHolder.attr('data-prototype');
-        var form = prototype.replace(/__name__/g, collectionHolder.children().length);
-
-        collectionHolder.append(form);
-
-        return false;
-    });
-    $('.btn-remove').live('click', function(event) {
-        var name = $(this).attr('data-related');
-        $('*[data-content="'+name+'"]').remove();
-
-        return false;
-    });
-        </script>
+<script type="text/javascript" src="{{ asset('bundles/applicationcertificats/js/datenew.js') }}"></script>
 {% endblock %}
 
 {% block content_header '' %}
@@ -103,12 +40,8 @@
 
 
         <table class="table table-striped table-bordered">
-
-
-            <tbody>
-
-
-                <tr>
+           <tbody>
+             <tr>
                     <td>
                         <div>
                             ETAPES:
@@ -122,125 +55,53 @@
 
  {% if flow.getCurrentStep() == 6 %}
                                 <div>
-            <p class="valider">Vérifier Les paramètres de la demande et cliquer sur Valider.</p>
-                 
                                    
-                                   <table class="table table-striped table-bordered table-hover">
-
-
-                                        <tbody>
-                                            <tr> <th>Nom</th><td>{{ entity.nom }}</td> </tr>
-                                            <tr> <th>Demandeur</th> <td>{{ entity.demandeur }}</td> </tr>
-                                            <tr> <th>Datedebut</th> <td>{{ entity.dateDebut|date('Y-m-d H:i:s') }}</td>   </tr>
-                                            <tr>
-                                                <th>Datefin</th>
-                                                <td>{{ entity.dateFin|date('Y-m-d H:i:s') }}</td>
-                                            </tr>
-                                            <tr>
-                                                <th>Datecomep</th>
-                                                <td>
+                     
+                                    {#{ dump form.vars }#}
+            <p class="valider">Vérifier Les paramètres de la demande et cliquer sur Valider.</p>
+                                  
+       <table class="table table-striped table-bordered table-hover">
+        <tbody>
+           <tr> <th>Nom</th><td>{{ entity.nom }}</td> </tr>
+           <tr> <th>Demandeur</th> <td>{{ entity.demandeur }}</td> </tr>
+           <tr> <th>Datedebut</th> <td>{{ entity.dateDebut|date('Y-m-d H:i:s') }}</td>   </tr>
+           <tr><th>Datefin</th><td>{{ entity.dateFin|date('Y-m-d H:i:s') }}</td></tr>
+           <tr><th>Datecomep</th> <td>
             {% if entity.dateComep is not null %}
                {{ entity.dateComep|date('Y-m-d H:i:s') }}
-                    {% else %}
-                                                        Aucune
-            {% endif %}
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <th>Datevsr</th>
-                                                    <td>
+            {% else %}
+               Aucune
+           {% endif %}
+           </td></tr>
+           <tr><th>Datevsr</th><td>
             {% if entity.dateVsr is not null %}
                {{ entity.dateVsr|date('Y-m-d H:i:s') }}
-                      {% else %}
-                                                            Aucune
+            {% else %}
+               Aucune
             {% endif %}
-                                                        </td>
-
-
-                                                    </tr>
-                                                    <tr>
-                                                        <th>Description</th>
-                                                        <td>{{ entity.description }}</td>
-                                                    </tr>
-
-                                                    <tr>
-                                                        <th>Projet</th>
-                                                        <td>{{ entity.idProjet }}</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <th>Status</th>
-                                                        <td>{{ entity.idStatus }}</td>
-                                                    </tr>
-                                                   
-                       <tr><th>Applications</th>
-                                                        <td>
-           {{ entity.idapplis|join(', ') }}   
-                                                            </td>
-                                                        </tr>
-
-                                                        <tr><th>Environnements</th>
-                                                            <td>
-
-           {{ entity.idEnvironnement|join(', ') }}   
-                                                             </td>
-                                                        </tr>
-
-
-
-                                                        <tr>
-                                                            <th>Utilisateurs</th>
-                                                            <td>
-           {{ entity.idusers|join(', ') }}   
-{#% for user in entity.idusers %} {{ user.nomUser }}
-
-       {% endfor %#}
-                                                                </td>
-                                                            </tr>
-
-
-                                                        </tbody>
-                                                    </table>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+           </td></tr>
+           <tr><th>Description</th>   <td>{{ entity.description }}</td> </tr>
+           <tr> <th>Projet</th> <td>{{ entity.idProjet }}</td>  </tr>
+           <tr><th>Status</th><td>{{ entity.idStatus }}</td></tr>
+           <tr><th>Applications</th>
+           <td>  {{ entity.idapplis|join(', ') }}      </td>  </tr>     
+           <tr><th>Environnements</th>
+           <td>{{ entity.idEnvironnement|join(', ') }}</td>  </tr>
+           <tr><th>Utilisateurs</th> <td> {{ entity.idusers|join(', ') }}</td>  </tr>
+            </tbody>
+           </table>
 
 
 {#{ form_row(form.termsOfService) }#}
-                                                </div>
+    </div>
     {% endif %}
     {{ form_rest(form) }}
-                                        </td></tr><tr><td colspan="2">
+     </td></tr><tr><td colspan="2">
                                             <!-- ======================= CRAUE SURCHARGE =================== -->
 
 
  {% set renderBackButton = flow.getCurrentStep() in (flow.getFirstStep() + 1) .. flow.getLastStep() %}
-                                            <div class="craue_formflow_buttons craue_formflow_button_count_{% if renderBackButton %}3{% else %}2{% endif %}">
+        <div class="craue_formflow_buttons craue_formflow_button_count_{% if renderBackButton %}3{% else %}2{% endif %}">
 	{#
 		Default button (the one trigged by pressing the enter/return key) must be defined first.
 		Thus, all buttons are defined in reverse order and will be reversed again via CSS.
@@ -256,19 +117,17 @@
 
 	{% if renderBackButton %}
 		{# see http://www.html5rocks.com/en/tutorials/forms/html5forms/ #}
-                                                        <button type="submit" class="btn btn-small btn-primary" name="{{ flow.getFormTransitionKey() }}" value="back" formnovalidate="formnovalidate">
+                     <button type="submit" class="btn btn-small btn-primary" name="{{ flow.getFormTransitionKey() }}" value="back" formnovalidate="formnovalidate">
 			{{- 'Retour' | trans({}, 'CraueFormFlowBundle') -}}
-                                                            </button>
+                   </button>
 	{% endif %}
 
-                                                            <button type="submit" class="btn btn-small btn-danger" name="{{ flow.getFormTransitionKey() }}" value="reset" formnovalidate="formnovalidate">
-		{{- 'RESET' | trans({}, 'CraueFormFlowBundle') -}}
-                                                                </button>
-                                                            </div>
+        <button type="submit" class="btn btn-small btn-danger" name="{{ flow.getFormTransitionKey() }}" value="reset" formnovalidate="formnovalidate">
+	{{- 'RESET' | trans({}, 'CraueFormFlowBundle') -}}
+        </button>
+       </div>
 
-                                                            <!-- ======================= FIN CRAUE SURCHARGE =================== -->        
-
-                                                            </form>
-                                                        </td></tr></tbody></table>
-
+     <!-- ======================= FIN CRAUE SURCHARGE =================== -->        
+    </form>
+    </td></tr></tbody></table>
 {% endblock %}
