--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -36,8 +36,14 @@
                 <script type="text/javascript" src="{{ asset('jquery/jquery-ui-1.9.2.custom.min.js') }}"></script>
                 <script type="text/javascript" src="{{ asset('jquery/jquery.ui.datepicker.js') }}"></script>
                 <script type="text/javascript" src="{{ asset('bootstrap/js/bootstrap.js') }}"></script>
-     {% endblock %}
-     {#{ tinymce_init() }#}
+   {#{ tinymce_init('advanced') }#}
+        <!-- <script type="text/javascript" src="{{ asset('bundles/staflcontinymce/vendor/tiny_mce/tiny_mce.js') }}"></script>
+            -->    <script type="text/javascript" >
+         
+    </script >            
+    
+ {% endblock %}
+    
             </div>
         </body>
 
