--- a/src/Application/CertificatsBundle/Resources/views/Changements/show.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Changements/show.html.twig
@@ -65,7 +65,8 @@
             </tr>
             <tr>
                 <th>Description</th>
-                <td>{{ entity.description }}</td>
+                
+                <td>{{ entity.description|raw }}</td>
             </tr>
 
             <tr>
