Day 1: sf22 init projet - sonataadmin tunning

--- a/src/Application/Sonata/UserBundle/Resources/views/layout.html.twig
+++ b/src/Application/Sonata/UserBundle/Resources/views/layout.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
     <head>
-        <title>{% block title %}Sticky Notes{% endblock %}</title>
+        <title>{% block title %}I-CHANGE{% endblock %}</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
           {% block stylesheets %}
          <link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap-responsive.css') }}" type="text/css" />
