--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -7,7 +7,7 @@
                                 <span class="icon-bar"></span> 
                                 <span class="icon-bar"></span> 
                             </a>
-                            <a class="brand" href="#">{% block toto %}I-CHANGE(v1.1){% endblock %}</a>
+                            <a class="brand" href="#">{% block toto %}I-CHANGE(v1.1a){% endblock %}</a>
                               
 
     
