--- a/src/Application/CertificatsBundle/Resources/views/Changements/index.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Changements/index.html.twig
@@ -84,7 +84,7 @@ Changements
 
                 <th>Environnements</th>
                 <!--<th>Avatar</th>-->
-                <th colspan="3">Actions</th>
+                <th colspan="2">Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -138,7 +138,9 @@ Changements
        {% endfor %#}
                                         </td>
 
-                                        <td>{#% if entity.avatar %}{{ entity.avatar }}{% endif %#}</td>
+<!--                                        <td>-->
+
+{#% if entity.avatar %}{{ entity.avatar }}{% endif %#}<!--</td>-->
 
                                         <td>
                                             <a href="{{ path('changements_show', { 'id': entity.id }) }}">
