Day 3: sonataadmin: news tinymce

--- a/src/Application/CertificatsBundle/Resources/views/Changements/newflow.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Changements/newflow.html.twig
@@ -44,7 +44,7 @@
 {% endblock %}
 
 {% block content_header '' %}
-{% block title %}EDITION CHANGEMENT{% endblock %}
+{% block title %}NOUVEAU CHANGEMENT{% endblock %}
 {% block content %}
 
 
