--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -37,10 +37,8 @@
                 <script type="text/javascript" src="{{ asset('jquery/jquery.ui.datepicker.js') }}"></script>
                 <script type="text/javascript" src="{{ asset('bootstrap/js/bootstrap.js') }}"></script>
    {#{ tinymce_init('advanced') }#}
-        <!-- <script type="text/javascript" src="{{ asset('bundles/staflcontinymce/vendor/tiny_mce/tiny_mce.js') }}"></script>
-            -->    <script type="text/javascript" >
-         
-    </script >            
+        <!-- <script type="text/javascript" src="{#{ asset('bundles/staflcontinymce/vendor/tiny_mce/tiny_mce.js') }#}"></script>
+            -->         
     
  {% endblock %}
     
