--- a/app/Resources/views/basen.html.twig
+++ b/app/Resources/views/basen.html.twig
@@ -7,17 +7,12 @@
         <link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap-responsive.css') }}" type="text/css" />
         <link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap.css') }}" type="text/css" />
         <link rel="stylesheet" href="{{ asset('css/jquery-ui-1.9.2.custom.css') }}" type="text/css" media="all"/>
-        <link rel="stylesheet" href="{{ asset('bundles/whiteoctoberpagerfanta/css/pagerfantaDefault.css') }}" type="text/css" media="all" />
+           <link rel="stylesheet" href="{{ asset('bundles/whiteoctoberpagerfanta/css/pagerfantaDefault.css') }}" type="text/css" media="all" />
         <link rel="stylesheet" href="{{ asset('bundles/applicationcertificats/css/certificatscenter.css') }}" type="text/css" media="all"/>
-        <style>
-
+   <style>
 .main-col { width: 70%; display: inline-block; float: left; border-right: 1px solid #ccc; padding: 20px; margin-bottom: 20px; }
 .sidebar {  padding: 10px; display: inline-block; }
-
-
-
 #footer { border-top: 1px solid #ccc; clear: both; text-align: center; padding: 10px; color: #aaa; }
-
     </style> 
  {% endblock %}
         
@@ -31,32 +26,22 @@
            <center><h1>   {% block title %}CERTIFICATS{% endblock %}</h1></center>
         
            
-           
-           
-           
-           
-           
-                <div class="container">
+               <div class="container-fluid">
     <div class="row-fluid">
+  
     <div class="span10">
-         {% block content %}
+    {% block content %}
                 {% endblock %}
+    </div>
+          <div class="span2">
     <!--Sidebar content-->
+    sidebar: todo
+    <br>last comments
+    <br>tag clouds 
     </div>
-    <div class="span2">
-       hkj
     </div>
     </div>
-    </div>
-           
-     
-                
-          
-          
-                 
-                
-            
-                <div id="footer">
+             <div id="footer">
                     <p align="center">{{ 'copyright MROOT'|trans }} © 2012</p>
                      
                 </div>
@@ -68,11 +53,12 @@
                 <script type="text/javascript" src="{{ asset('jquery/jquery-ui-1.9.2.custom.min.js') }}"></script>
                 <script type="text/javascript" src="{{ asset('jquery/jquery.ui.datepicker.js') }}"></script>
                 <script type="text/javascript" src="{{ asset('bootstrap/js/bootstrap.js') }}"></script>
-     {% endblock %}
-     {#{ tinymce_init() }#}
-            </div>
-        </body>
+   {#{ tinymce_init('advanced') }#}
+        <!-- <script type="text/javascript" src="{#{ asset('bundles/staflcontinymce/vendor/tiny_mce/tiny_mce.js') }#}"></script>
+            -->         
+    
+ {% endblock %}
+                </body>
 
     </html>
     
-
