--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,6 +12,7 @@
          {% endblock %}
     </head>
     <body>
+        
         <div class="container">
             <div class="page-header">
                       {{ block('NAVIGATION_BAR') }}
@@ -34,7 +35,7 @@
        {% block javascripts %}
                 <script src="{{ asset('jquery/jquery-1.8.3.js') }}" type="text/javascript"></script>
                 <script type="text/javascript" src="{{ asset('jquery/jquery-ui-1.9.2.custom.min.js') }}"></script>
-                <script type="text/javascript" src="{{ asset('jquery/jquery.ui.datepicker.js') }}"></script>
+                <script type="text/javascript" src="{{ asset('jquery/jquery.ui.datepicker-fr.js') }}"></script>
                 <script type="text/javascript" src="{{ asset('bootstrap/js/bootstrap.js') }}"></script>
    {#{ tinymce_init('advanced') }#}
         <!-- <script type="text/javascript" src="{#{ asset('bundles/staflcontinymce/vendor/tiny_mce/tiny_mce.js') }#}"></script>
