--- a/src/Application/CertificatsBundle/Resources/views/Changements/edit.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Changements/edit.html.twig
@@ -55,9 +55,22 @@
 {% block content_header '' %}
 {% block title %}EDITION CHANGEMENT{% endblock %}
 {% block content %}
-
-
-
+<!--
+<p>Animations:<br />
+<select id="anim">
+<option value="show">Show (default)</option>
+<option value="slideDown">Slide down</option>
+<option value="fadeIn">Fade in</option>
+<option value="blind">Blind (UI Effect)</option>
+<option value="bounce">Bounce (UI Effect)</option>
+<option value="clip">Clip (UI Effect)</option>
+<option value="drop">Drop (UI Effect)</option>
+<option value="fold">Fold (UI Effect)</option>
+<option value="slide">Slide (UI Effect)</option>
+<option value="">None</option>
+</select>
+</p>
+-->
     <form action="{{ path('changements_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
         <table class="table table-bordered">
             <tbody>
