services et produits

--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -57,6 +57,17 @@
                                         
                                         </ul>
                                     </li>
+                                      eservice
+                                      
+                                       <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="icon-white  icon-user"></i>
+                                               Services<b class="caret"></b> </a>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="{{ path('eservice') }}"><i class="icon-camera"></i> {{ 'Dashboard Services'|trans }}</a></li>
+                                            <li><a href="{{ path('eproduit') }}"><i class="icon-plus-sign"></i> {{ 'Produits'|trans }}</a></li>
+                                            </ul>
+                                    </li>
+                                    
+                                   
                                       
                                        <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="icon-white  icon-user"></i>
                                                Certificats<b class="caret"></b> </a>
