--- a/src/Application/CertificatsBundle/Resources/views/Eproduit/index.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eproduit/index.html.twig
@@ -1,19 +1,39 @@
-{% extends '::base.html.twig' %}
+{% extends "ApplicationCertificatsBundle::layout.html.twig" %}
 
-{% block body -%}
-    <h1>Eproduit list</h1>
+  {% block stylesheets %}
+{{ parent() }}
+      <link rel="stylesheet" href="{{ asset('bundles/applicationcertificats/css/sliding.css') }}" type="text/css" media="all"/>
+     
+ {% endblock %}
 
-    <table class="records_list">
-        <thead>
-            <tr>
-                <th>Id</th>
+{% block content_header '' %}
+{% block title %}
+LISTE DES SERVICES 
+{% endblock %}
+{% block content %}
+
+
+{% for type, flashMessages in app.session.flashbag.all() %}
+    {% for flashMessage in flashMessages %}
+        <div class="alert alert-{{ type }}">
+            {{ flashMessage|trans }}
+        </div>
+    {% endfor %}
+{% endfor %}
+
+<h1>Eproduit list</h1>
+
+<table class="table table-striped table-bordered table-hover">
+    <thead>
+        <tr class="title"> 
+                 <th>Id</th>
                 <th>Name</th>
                 <th>Description</th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
-        {% for entity in entities %}
+        {% for entity in pagination %}
             <tr>
                 <td><a href="{{ path('eproduit_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.name }}</td>
