--- a/src/Application/CertificatsBundle/Resources/views/Eproduit/new.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eproduit/new.html.twig
@@ -1,6 +1,15 @@
-{% extends '::base.html.twig' %}
+{% extends "ApplicationCertificatsBundle::layout.html.twig" %}
 
-{% block body -%}
+  {% block stylesheets %}
+{{ parent() }}
+      <link rel="stylesheet" href="{{ asset('bundles/applicationcertificats/css/sliding.css') }}" type="text/css" media="all"/>
+     
+ {% endblock %}
+
+{% block content_header '' %}
+
+{% block content %}
+
     <h1>Eproduit creation</h1>
 
     <form action="{{ path('eproduit_create') }}" method="post" {{ form_enctype(form) }}>
